<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ahome"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="407dp"
            android:layout_height="106dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/header" />
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="173dp"
                android:layout_height="23dp"
                android:layout_marginStart="23dp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="203dp"
                android:layout_marginRight="203dp"
                android:text="@string/mission"
                android:textColor="#3250A8"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="285dp"
                android:layout_marginStart="34dp"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="35dp"
                android:layout_marginRight="35dp"
                android:text="@string/missionDes"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:text="@string/missionDes" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="107dp"
                android:layout_height="25dp"
                android:layout_marginStart="23dp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="281dp"
                android:layout_marginRight="281dp"
                android:text="@string/LS"
                android:textColor="#3250A8"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="408dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="31dp"
                android:layout_marginRight="31dp"
                android:text="@string/LSDes"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="107dp"
                android:layout_height="25dp"
                android:layout_marginStart="23dp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="281dp"
                android:layout_marginRight="281dp"
                android:text="@string/TMAI"
                android:textColor="#3250A8"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="488dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="31dp"
                android:layout_marginRight="31dp"
                android:text="@string/TMAIDes"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <ImageView
                android:layout_width="390dp"
                android:layout_height="273dp"
                android:paddingLeft="40dp"
                android:src="@drawable/workforce" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="348dp"
                android:layout_height="268dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="31dp"
                android:layout_marginRight="31dp"
                android:text="@string/TMAIDes2"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:src="@drawable/dhasa" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="348dp"
                android:layout_height="113dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="31dp"
                android:layout_marginRight="31dp"
                android:text="@string/TMAIDes3"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>